# foxOps

./: .deepsource.toml  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml
.github/: dependabot.yml  issue-branch.yml
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: codeql-analysis.yml  deploy-mkdocs.yml  issue-branch.yml  poetry-update.yml
docs/: index.md
docs/guides/: road-map.md  users.md
docs/ledgers/: decision-register.md
docs/registers/: decisions.md  requirements.md
docs/templates/: y-statements.md
foxops/: __main__.py  cli.py  config.py  configuration.py  foxops.py  group.py  project.py  utils.py
foxops/commands/: __init__.py  group.py
guides/road-map/: index.html
guides/users/: index.html
registers/decisions/: index.html
registers/requirements/: index.html
search/: search_index.json
src/foxops/: __init__.py  __main__.py  cli.py  config.py  foxops.py
src/foxops/commands/: __init__.py  group.py
tests/: __init__.py  cli_test.py
